<resources>
    <string name="app_name">task_manager</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="abc_g_com">abc@g.com</string>
    <string name="main_menu">Main-Menu</string>
    <string name="project_name">Project Name</string>
    <string name="status">Status:</string>
    <string name="started_date">Started Date</string>
    <string name="deadline">DeadLine</string>
</resources>