<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/projectLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/projectType"
            android:backgroundTint="@color/secondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/CustomTextViewRegularRounded"
            android:text="Mobile"
            android:textColor="@color/white"
            tools:ignore="HardcodedText" />
        <TextView
            app:layout_constraintTop_toTopOf="@+id/projectType"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/projectType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomTextViewRegular"
            android:text="@string/project_name"
            android:id="@+id/projectName"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            android:id="@+id/layoutStatusProject"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/titleStatusProject"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewRegular"
                android:text="@string/status"/>
            <TextView
                android:id="@+id/statusProject"
                android:backgroundTint="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewRegularRounded"
                android:text="Done"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/layoutProjectDate"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutStatusProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/titleStartedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegular"
                    android:text="@string/started_date"/>
                <TextView
                    android:id="@+id/startedDate"
                    app:layout_constraintLeft_toLeftOf="@+id/titleStartedDate"
                    app:layout_constraintTop_toBottomOf="@+id/titleStartedDate"
                    app:layout_constraintRight_toRightOf="@+id/titleStartedDate"
                    android:backgroundTint="@color/primary"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegularRounded"
                    android:text="12-10-2021"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/titleDeadLineDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegular"
                    android:text="@string/deadline"/>
                <TextView
                    android:id="@+id/deadLineDate"
                    app:layout_constraintLeft_toLeftOf="@+id/titleDeadLineDate"
                    app:layout_constraintTop_toBottomOf="@+id/titleDeadLineDate"
                    app:layout_constraintRight_toRightOf="@+id/titleDeadLineDate"
                    android:backgroundTint="@color/secondary"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegularRounded"
                    android:text="12-10-2021"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/titleEndtedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegular"
                    android:text="End Date"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/endDate"
                    app:layout_constraintLeft_toLeftOf="@+id/titleEndtedDate"
                    app:layout_constraintTop_toBottomOf="@+id/titleEndtedDate"
                    app:layout_constraintRight_toRightOf="@+id/titleEndtedDate"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextViewRegularRounded"
                    android:text="12-10-2021"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectDate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/createdBy"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/accountPicture"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewRegular"
                android:text="Created By"
                tools:ignore="HardcodedText" />
            <ImageView
                android:id="@+id/accountPicture"
                android:importantForAccessibility="no"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:icon="@drawable/ic_project"
                style="@style/CustomButtonIconCircle"
                android:src="@drawable/ic_account"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iconAccount"
                android:importantForAccessibility="no"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_account"/>

            <TextView
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/iconAccount"
                android:id="@+id/contributor"
                style="@style/CustomTextViewRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="10"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>